Initial start to combining forge Tebex into the multimodule Tebex project, also refracting from buycraft to Tebex.